@@ -302,6 +302,7 @@
 #define  VG_U_LD_SO_1               "ld.so.1"
 
 #define  VG_U_LD_LINUX_AARCH64_SO_1 "ld-linux-aarch64.so.1"
+#define  VG_U_LD_LINUX_ARMHF_SO_3   "ld-linux-armhf.so.3"
 
 #endif
 
